; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_handspring_handshake.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_handspring_handshake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@handspring_handshake.codeA = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @handspring_handshake() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %16, %0
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 5
  br i1 %5, label %6, label %19

6:                                                ; preds = %3
  %7 = call i32 (...) @get_serial_byte()
  store i32 %7, i32* @handspring_handshake.codeA, align 4
  %8 = load i32, i32* @handspring_handshake.codeA, align 4
  %9 = icmp eq i32 249, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %6
  %11 = call i32 (...) @get_serial_byte()
  %12 = icmp eq i32 251, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32 1, i32* %1, align 4
  br label %20

14:                                               ; preds = %10
  br label %15

15:                                               ; preds = %14, %6
  br label %16

16:                                               ; preds = %15
  %17 = load i32, i32* %2, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %2, align 4
  br label %3

19:                                               ; preds = %3
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %13
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @get_serial_byte(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
